[gd_scene load_steps=8 format=2]

[ext_resource path="res://Global/EffectsNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Global/GlobalTheme.tres" type="Theme" id=2]
[ext_resource path="res://Menu/Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Menu/Assets/audio/main_menu.ogg" type="AudioStream" id=4]
[ext_resource path="res://Menu/Assets/audio/select.ogg" type="AudioStream" id=5]
[ext_resource path="res://Menu/Assets/audio/Start_game_sound.ogg" type="AudioStream" id=6]
[ext_resource path="res://Menu/Assets/audio/hover.ogg" type="AudioStream" id=7]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 50
custom_constants/margin_top = 100
custom_constants/margin_left = 50
custom_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
margin_left = 50.0
margin_top = 100.0
margin_right = 590.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 292.0
margin_bottom = 280.0
custom_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 160.0
margin_bottom = 280.0
alignment = 1

[node name="StartGame" type="Button" parent="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 160.0
margin_bottom = 123.0
focus_neighbour_bottom = NodePath("../Options")
theme = ExtResource( 2 )
shortcut_in_tooltip = false
text = "Start Game"

[node name="Options" type="Button" parent="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 160.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../StartGame")
focus_neighbour_bottom = NodePath("../Exit")
theme = ExtResource( 2 )
text = "Options"

[node name="Exit" type="Button" parent="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 160.0
margin_bottom = 181.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../StartGame")
theme = ExtResource( 2 )
text = "Exit"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 296.0
margin_right = 508.0
margin_bottom = 280.0
custom_constants/margin_left = 100

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/MarginContainer2"]
margin_left = 100.0
margin_top = 113.0
margin_right = 212.0
margin_bottom = 166.0
text = "Math
Madness"
align = 1
valign = 1
uppercase = true

[node name="EffectsNode" parent="." instance=ExtResource( 1 )]

[node name="Sharpness" parent="EffectsNode/BackBufferCopy2" index="0"]
visible = false

[node name="FadeTween" type="Tween" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="MenuBG" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
autoplay = true

[node name="Select" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="StartGame" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="Hover" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[connection signal="mouse_entered" from="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_mouse_entered"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]

[editable path="EffectsNode"]
